@@ -1,3 +1,12 @@
+2005-05-31  Richard Henderson  <rth@redhat.com>
+
+	* config/tc-alpha.c (O_lituse_jsrdirect): New.
+	(alpha_reloc_op): Add it.
+	(debug_exp): Handle it.
+	(DUMMY_RELOC_LITUSE_JSRDIRECT): New.
+	(emit_insn): Handle it.
+	* doc/c-alpha.texi (Alpha-Relocs): Document lituse_jsrdirect.
+
 2005-05-31  Christian Groessler  <chris@groessler.org>
 
 	* write.c (dump_section_relocs): Convert to ISO-C.
